test/source/errors/empty-output-stmt.hc
// This file contains an output statement
// with no expression attached to it.
// This should throw an error at the parser level
// since output statements expect an expression.

output
